; ModuleID = '/home/carl/AnghaBench/vlc/modules/stream_out/extr_smem.c_VideoPostrenderDefaultCallback.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/stream_out/extr_smem.c_VideoPostrenderDefaultCallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @VideoPostrenderDefaultCallback(i8* %0, i32* %1, i32 %2, i32 %3, i32 %4, i64 %5, i64 %6) #0 {
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  store i8* %0, i8** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i64 %5, i64* %13, align 8
  store i64 %6, i64* %14, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = ptrtoint i8* %15 to i64
  %17 = call i32 @VLC_UNUSED(i64 %16)
  %18 = load i32*, i32** %9, align 8
  %19 = ptrtoint i32* %18 to i64
  %20 = call i32 @VLC_UNUSED(i64 %19)
  %21 = load i32, i32* %10, align 4
  %22 = sext i32 %21 to i64
  %23 = call i32 @VLC_UNUSED(i64 %22)
  %24 = load i32, i32* %11, align 4
  %25 = sext i32 %24 to i64
  %26 = call i32 @VLC_UNUSED(i64 %25)
  %27 = load i32, i32* %12, align 4
  %28 = sext i32 %27 to i64
  %29 = call i32 @VLC_UNUSED(i64 %28)
  %30 = load i64, i64* %13, align 8
  %31 = call i32 @VLC_UNUSED(i64 %30)
  %32 = load i64, i64* %14, align 8
  %33 = call i32 @VLC_UNUSED(i64 %32)
  ret void
}

declare dso_local i32 @VLC_UNUSED(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
